Correct content padding to navbar on mobile

--- a/web-service/src/static/style.css
+++ b/web-service/src/static/style.css
@@ -83,7 +83,7 @@ body {
 
 /* < md */
 .navbar-pushed {
-  padding-top: 112px; /* Space for fixed navbar */
+  padding-top: 122px; /* Space for fixed navbar */
 }
 
 /* => md */
